--- a/pom.xml
+++ b/pom.xml
@@ -228,7 +228,11 @@
 	       <version>2.3.0</version>
 	    </dependency>
 
-
+		<dependency>
+			<groupId>com.googlecode.combinatoricslib</groupId>
+			<artifactId>combinatoricslib</artifactId>
+			<version>2.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
